# MPFC

./: CMakeLists.txt  Compile.sh  FC.cpp  out.txt  txt.out
include/: MPFeldman_Cousins.hh
lib/: MPFeldman_Cousinsdict_rdict.pcm
src/: MPFeldman_Cousins.cpp
src/dicts/: MPFeldman_Cousinsdict.cpp
